src/lib/sandboxes/__fixtures__/javascript/syntax-error/submission/solution.mjs
export function twoSum(nums, target) {
  const seen = new Map()
  for (let i = 0; i < nums.length; i++ {  // missing closing paren
    seen.set(nums[i], i);
  }
  return [];
}
